redux setup and api services

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,4 +4,4 @@
 @import "./global/reset";
 @import "./components/header";
 @import "./components/footer";
-@import "./forms/loginForm";
+@import "./components/loginForm";
